@@ -1,3 +1,8 @@
+2013-08-26         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* vms-conf.h (RE_TOKEN_INIT_BUG): Remove define (change of
+	Feb 19 2005) since it's no longer needed.
+
 2013-06-03         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawkmisc.c (init_sockets): New dummy function.
