@@ -1,3 +1,8 @@
+2013-08-26         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* regcomp.c (parse_dup_op): Remove RE_TOKEN_INIT_BUG code (change of
+	Feb 19 2005) since it's no longer needed.
+
 2013-08-20         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* nonposix.h: New file. Contains FAKE_FD_VALUE.
